--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -4,8 +4,8 @@ import { EXPERIENCE } from "../lib/constants";
 ---
 
 <Layout title="Fabian Casas Portfolio">
-  <main class="flex justify-center items-start md:max-w-3xl mx-auto">
-    <ul class="w-auto">
+  <main class="flex flex-col justify-center items-start md:max-w-3xl mx-auto">
+    <!-- <ul class="w-auto">
       {
         EXPERIENCE.map((exp) => (
           <li class="mb-4 mt-7 2xl:mt-14">
@@ -29,42 +29,48 @@ import { EXPERIENCE } from "../lib/constants";
           </li>
         ))
       }
-    </ul>
-    <!-- <div class="container px-5 py-24 mx-auto">
-      <div class="-my-8 divide-y-2 divide-gray-100">
-        <div class="py-8 flex flex-wrap md:flex-nowrap">
-          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-            <span class="font-semibold title-font text-gray-700">CATEGORY</span>
-            <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
-          </div>
-          <div class="md:flex-grow">
-            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
-              Bitters hashtag waistcoat fashion axe chia unicorn
-            </h2>
-            <p class="leading-relaxed">
-              Glossier echo park pug, church-key sartorial biodiesel
-              vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon
-              party messenger bag selfies, poke vaporware kombucha lumbersexual
-              pork belly polaroid hoodie portland craft beer.
-            </p>
-            <a class="text-indigo-500 inline-flex items-center mt-4"
-              >Learn More
-              <svg
-                class="w-4 h-4 ml-2"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                stroke-width="2"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M5 12h14"></path>
-                <path d="M12 5l7 7-7 7"></path>
-              </svg>
-            </a>
+    </ul> -->
+    {
+      EXPERIENCE.map((exp) => (
+        <div class="py-10 mx-auto">
+          <div class="-my-8 divide-y-2 divide-gray-100">
+            <div class="py-8 flex flex-wrap md:flex-nowrap">
+              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                <span class="font-semibold title-font text-gray-700">
+                  CATEGORY
+                </span>
+                <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
+              </div>
+              <div class="md:flex-grow">
+                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
+                  Bitters hashtag waistcoat fashion axe chia unicorn
+                </h2>
+                <p class="leading-relaxed">
+                  Glossier echo park pug, church-key sartorial biodiesel
+                  vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf
+                  moon party messenger bag selfies, poke vaporware kombucha
+                  lumbersexual pork belly polaroid hoodie portland craft beer.
+                </p>
+                <a class="text-indigo-500 inline-flex items-center mt-4">
+                  Learn More
+                  <svg
+                    class="w-4 h-4 ml-2"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path d="M5 12h14" />
+                    <path d="M12 5l7 7-7 7" />
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div> -->
+      ))
+    }
   </main>
 </Layout>
