--- a/src/components/EducationCard.astro
+++ b/src/components/EducationCard.astro
@@ -14,7 +14,7 @@ import { EDUCATION } from "../lib/constants";
         {
             EDUCATION.slice(0, 1).map((exp) => (
                 <div>
-                    <p class="text-lg dark:text-[#f9d4d4] text-[#f8b0b0]">{exp.position}</p>
+                    <p class="text-lg dark:text-[#f9d4d4] text-indigo-500 font-semibold">{exp.position}</p>
                     <p class="text-white-500">{exp.name}</p>
                     <p class="text-white-500">
                         {exp.start} - {exp.end}
