--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -28,7 +28,7 @@ import { EDUCATION } from "../lib/constants";
               data-aos-delay={index % 2 === 0 ? "300" : "500"}
               class="md:max-w-sm  p-7 my-3 dark:text-white overflow-hidden transition-colors duration-500 ease-in-out bg-[#FFFFFF] dark:bg-[#131313] border-[1px] dark:border-[#2c2c2c] border-[#E0E0E0] shadow-md rounded-xl"
             >
-              <p class="course-title text-5xl font-semibold">{edu.name}</p>
+              <p class="course-title text-5xl font-semibold text-indigo-500 dark:text-[#f9d4d4]">{edu.name}</p>
               <p class="institution text-lg">{edu.location}</p>
               <p class="location text-lg">
                 {edu.start} - {edu.end}
