--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -39,7 +39,7 @@ const PDF = "/Fabian_CV_2.pdf";
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
         <h1 class="text-2xl font-bold">🚀 Bienvenido/a</h1>
-        <p class="m-1 text-[#212121] 2xl:text-lg text-base dark:text-white text-wrap" data-cursor="text">
+        <p class="m-1 text-[#212121] 2xl:text-lg text-base dark:text-white text-pretty" data-cursor="text">
           Soy <span class="font-bold">Fabián Casas</span> Estudiante
           de la carrera
           <span class="font-bold">Analista Programador</span> en <span
