--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,7 +7,7 @@ import Card from "./Card/index.astro";
         >Conocimientos y Habilidades</span
     >
     <div class="">
-        <ul data-cursor="text" class="pl-4 mt-1 space-y-[2px] text-sm xl:text-base xl:space-y-[8px] ">
+        <ul data-cursor="text" class="pl-4 mt-1 space-y-[2px] text-sm 2xl:space-y-[8px] ">
             <li class="flex items-center gap-2">
                 • Javascript
                 <svg
@@ -222,6 +222,6 @@ import Card from "./Card/index.astro";
                 >
             </li>
         </ul>
-        <p class="text-sm xl:text-base text-white-600 dark:text-white-400 mt-3" data-cursor="text">Ádemas de programar me gusta mucho el fútbol, los videojuegos y la música</p>
+        <p class="text-base text-white-600 dark:text-white-400 mt-3" data-cursor="text">Ádemas de programar me gusta mucho el fútbol, los videojuegos y la música</p>
     </div>
 </Card>
