--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -27,7 +27,7 @@ import Link from "../components/icons/Link.astro";
           }
           data-aos-duration="2000"
         >
-          <h3 data-cursor="text"  class=" text-2xl font-bold  text- dark:text-[#d0aeae] text-indigo-500 ">{project.title}</h3>
+          <h3 data-cursor="text"  class=" text-2xl font-bold  text- text-orange-600 dark:text-indigo-500 ">{project.title}</h3>
  
           <p data-cursor="text"  class=" text-lg mb-4 text-pretty text-black dark:text-white">{project.description}</p>
           <ul class=" flex gap-x-2 flex-wrap mb-0 sm:flex-row">
