--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,11 +10,15 @@ const { rounded, animate } = Astro.props;
 <button data-cursor="block"
 
     class={`text-xl max-h-[50px]  
-            text-black dark:text-white px-5 py-2 border border-indigo-500
-            dark:hover:text-indigo-500 hover:text-indigo-500 hover:border-indigo-500 
+            text-black dark:text-white px-5 py-2 border dark:border-indigo-500 border-orange-600
+
+            dark:hover:text-indigo-500 dark:hover:border-indigo-500 
+            hover:text-orange-600  hover:border-orange-600 
+
             transition-colors duration-300 ease-in-out 
             bg-darkslate-900 
-            shadow-[3px_2px_0px_#4F46E5]
+            dark:shadow-[3px_2px_0px_#6366f1]
+            shadow-[3px_2px_0px_#ea580c]
             ${animate}
             ${rounded ? "rounded-full" : "rounded-lg"}`}
 >
