--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -44,11 +44,11 @@ const THEMES = ["Light", "Dark", "System"];
   transition:persist
   data-cursor="block"
   id="theme-toggle-btn"
-  class=` ${ocultar} link text-xl max-h-[50px] flex items-center text-black dark:text-white px-5 py-2 border border-indigo-500
-            dark:hover:text-indigo-500 hover:text-indigo-500 hover:border-indigo-500
-            transition-colors duration-300 ease-in-out
+  class=` ${ocultar} link text-xl max-h-[50px] flex items-center text-black dark:text-white px-5 py-2 border dark:border-indigo-500 border-orange-600 
+            dark:hover:text-indigo-500 hover:text-orange-600 dark:hover:border-indigo-500 hover:border-orange-600
+            transition-colors duration-300 ease-in-out 
             bg-darkslate-900
-            shadow-[3px_2px_0px_#4F46E5] rounded-lg`
+            dark:shadow-[3px_2px_0px_#4F46E5] shadow-[3px_2px_0px_#ea580c]  rounded-lg`
 >
   <SunIcon id="light" class=" theme-toggle-icon size-5 transition-all" />
   <MoonIcon
