mejor responsive proyects page

--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -9,7 +9,7 @@ import { EDUCATION } from "../lib/constants";
       {
         EDUCATION.map((edu, index) => (
           <li data-aos="fade" data-aos-duration="2000" id={`card${index + 1}`}>
-            <div class="flex mb-20 flex-col justify-between h-auto group overflow-hidden transition-colors duration-500 ease-in-out bg-white dark:bg-[#131313] p-6 border border-[#E0E0E0] dark:border-[#2c2c2c] shadow-lg rounded-xl hover:border-orange-600 dark:hover:border-indigo-500">
+            <div class="flex mb-20 flex-col justify-between h-auto group overflow-hidden transition-colors duration-500 ease-in-out bg-white dark:bg-[#131313] p-6 border-[1.6px] border-[#E0E0E0] dark:border-[#2c2c2c] shadow-lg rounded-xl hover:border-orange-600 dark:hover:border-indigo-500">
               <div>
                 <div class="flex items-center gap-3 mb-4">
                   <div data-cursor="block" class="p-3 bg-orange-100 dark:bg-[#1a1a1a] rounded-lg">
