--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -22,7 +22,7 @@ import { EXPERIENCE } from "../lib/constants";
           </div>
 
           {/* Contenido */}
-          <div class="flex flex-col md:flex-row gap-6 p-6 bg-white dark:bg-[#131313] border border-[#E0E0E0] dark:border-[#2c2c2c] rounded-xl shadow-md hover:border-orange-600 dark:hover:border-indigo-500 transition-colors">
+          <div class="flex flex-col md:flex-row gap-6 p-6 bg-white dark:bg-[#131313] border-[1.6px] border-[#E0E0E0] dark:border-[#2c2c2c] rounded-xl shadow-md hover:border-orange-600 dark:hover:border-indigo-500 transition-colors">
             {/* Sección izquierda */}
             <div class="md:w-48 flex-shrink-0">
               <div data-cursor="block" class="bg-orange-100 dark:bg-[#1a1a1a] px-3 py-1 rounded-full inline-block">
