--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -34,14 +34,16 @@ const PDF = "/Fabian_CV_2.pdf";
   timeline(sequence as TimelineDefinition);
 </script>
 
-<Card colSpan="md:col-span-3 overflow-hidden" rowSpan="md:row-span-4">
+<Card colSpan="md:col-span-3 overflow-hidden" rowSpan="md:row-span-4" title="🚀Bienvenido/a">
   <div class="flex w-full h-full">
-    <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
-      <div class="flex flex-col h-full">
-        <h1 class="text-2xl font-bold">🚀 Bienvenido/a</h1>
-        <p class="m-1 text-[#212121] 2xl:text-lg text-base dark:text-white text-pretty" data-cursor="text">
-          Soy <span class="font-bold">Fabián Casas</span> Estudiante
-          de la carrera
+    <div class="flex flex-col justify-between md:max-h-[190px] gap-4">
+      <div>
+
+        <p
+          class="m-1 text-[#212121] 2xl:text-lg text-base dark:text-white text-pretty"
+          data-cursor="text"
+        >
+          Soy <span class="font-bold">Fabián Casas</span> Estudiante de la carrera
           <span class="font-bold">Analista Programador</span> en <span
             class="text-[#fbbd1e]">Duoc</span
           >
