--- a/src/components/ExperiencieCard.astro
+++ b/src/components/ExperiencieCard.astro
@@ -6,6 +6,7 @@ import Card from "./Card/index.astro";
     colSpan="md:col-span-1 flex items-center justify-center"
     rowSpan="md:row-span-1"
     href="/experience"
+    title="💼 Experiencia"
 >
-    <p class="text-lg font-medium text-center">Experiencia</p>
+
 </Card>
