--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,227 +1,35 @@
 ---
 import Card from "./Card/index.astro";
+import { SKILLS } from "../lib/constants.ts";
 ---
 
-<Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="👨‍💻 Skills">
-    <span class="text-sm text-white-600 dark:text-white-400" data-cursor="text"
-        >Conocimientos y Habilidades</span
+<Card
+  colSpan="md:col-span-1"
+  rowSpan="md:row-span-6"
+  title="👨‍💻 Skills"
+>
+  <div class="mt-3">
+    <ul
+      data-cursor="text"
+      class="pl-4 2xl:space-y-2 text-base text-black dark:text-white"
     >
-    <div class="">
-        <ul data-cursor="text" class="pl-4 mt-1 space-y-[2px] text-sm 2xl:space-y-[8px] ">
-            <li class="flex items-center gap-2">
-                • Javascript
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 1052 1052"
-                    ><path fill="#f0db4f" d="M0 0h1052v1052H0z"></path><path
-                        d="M965.9 801.1c-7.7-48-39-88.3-131.7-125.9-32.2-14.8-68.1-25.399-78.8-49.8-3.8-14.2-4.3-22.2-1.9-30.8 6.9-27.9 40.2-36.6 66.6-28.6 17 5.7 33.1 18.801 42.8 39.7 45.4-29.399 45.3-29.2 77-49.399-11.6-18-17.8-26.301-25.4-34-27.3-30.5-64.5-46.2-124-45-10.3 1.3-20.699 2.699-31 4-29.699 7.5-58 23.1-74.6 44-49.8 56.5-35.6 155.399 25 196.1 59.7 44.8 147.4 55 158.6 96.9 10.9 51.3-37.699 67.899-86 62-35.6-7.4-55.399-25.5-76.8-58.4-39.399 22.8-39.399 22.8-79.899 46.1 9.6 21 19.699 30.5 35.8 48.7 76.2 77.3 266.899 73.5 301.1-43.5 1.399-4.001 10.6-30.801 3.199-72.101zm-394-317.6h-98.4c0 85-.399 169.4-.399 254.4 0 54.1 2.8 103.7-6 118.9-14.4 29.899-51.7 26.2-68.7 20.399-17.3-8.5-26.1-20.6-36.3-37.699-2.8-4.9-4.9-8.7-5.601-9-26.699 16.3-53.3 32.699-80 49 13.301 27.3 32.9 51 58 66.399 37.5 22.5 87.9 29.4 140.601 17.3 34.3-10 63.899-30.699 79.399-62.199 22.4-41.3 17.6-91.3 17.4-146.6.5-90.2 0-180.4 0-270.9z"
-                        fill="#323330"></path></svg
-                >
-            </li>
-            <li class="flex items-center gap-2">
-                • Django
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 32 32"
-                    ><path
-                        d="M14.135 4H18.1v18.169a26.218 26.218 0 0 1-5.143.535c-4.842-.005-7.362-2.168-7.362-6.322 0-4 2.673-6.6 6.816-6.6a6.448 6.448 0 0 1 1.724.2V4Zm0 9.142a3.992 3.992 0 0 0-1.337-.2c-2 0-3.163 1.223-3.163 3.366 0 2.087 1.107 3.239 3.138 3.239a9.355 9.355 0 0 0 1.362-.1v-6.3Z"
-                        style="fill:#44b78b"></path><path
-                        d="M24.4 10.059v9.1c0 3.133-.235 4.639-.923 5.938A6.316 6.316 0 0 1 20.237 28l-3.678-1.733a5.708 5.708 0 0 0 3.141-2.629c.566-1.121.745-2.42.745-5.837v-7.742ZM20.441 4.02h3.964v4.028h-3.964z"
-                        style="fill:#44b78b"></path></svg
-                >
-            </li>
-            <li class="flex items-center gap-2">
-                • Angular
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    x="0px"
-                    y="0px"
-                    width="22"
-                    height="22"
-                    viewBox="0 0 48 48"
-                >
-                    <path
-                        fill="#bdbdbd"
-                        d="M23.933 2L3 9.285 6.308 36.408 23.955 46 41.693 36.278 45 9.156z"
-                    ></path><path
-                        fill="#b71c1c"
-                        d="M42.818 10.527L24 4.135 24 43.695 39.832 35.017z"
-                    ></path><path
-                        fill="#dd2c00"
-                        d="M23.941 4.115L5.181 10.644 8.168 35.143 23.951 43.721 24 43.695 24 4.135z"
-                    ></path><path
-                        fill="#bdbdbd"
-                        d="M24 5.996L24 15.504 32.578 34 36.987 34z"
-                    ></path><path
-                        fill="#eee"
-                        d="M11.013 34L15.422 34 24 15.504 24 5.996z"
-                    ></path><path fill="#bdbdbd" d="M24 24H30V28H24z"
-                    ></path><path fill="#eee" d="M18 24H24V28H18z"></path>
-                </svg>
-            </li>
-            <li class="flex items-center gap-2">
-                • Astro
-                <svg
-                    viewBox="0 0 256 366"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    preserveAspectRatio="xMidYMid"
-                    ><path
-                        fill="#fff"
-                        d="M182.022 9.147c2.982 3.702 4.502 8.697 7.543 18.687L256 246.074a276.467 276.467 0 0 0-79.426-26.891L133.318 73.008a5.63 5.63 0 0 0-10.802.017L79.784 219.11A276.453 276.453 0 0 0 0 246.04L66.76 27.783c3.051-9.972 4.577-14.959 7.559-18.654a24.541 24.541 0 0 1 9.946-7.358C88.67 0 93.885 0 104.314 0h47.683c10.443 0 15.664 0 20.074 1.774a24.545 24.545 0 0 1 9.95 7.373Z"
-                    ></path><path
-                        fill="#FF5D01"
-                        d="M189.972 256.46c-10.952 9.364-32.812 15.751-57.992 15.751-30.904 0-56.807-9.621-63.68-22.56-2.458 7.415-3.009 15.903-3.009 21.324 0 0-1.619 26.623 16.898 45.14 0-9.615 7.795-17.41 17.41-17.41 16.48 0 16.46 14.378 16.446 26.043l-.001 1.041c0 17.705 10.82 32.883 26.21 39.28a35.685 35.685 0 0 1-3.588-15.647c0-16.886 9.913-23.173 21.435-30.48 9.167-5.814 19.353-12.274 26.372-25.232a47.588 47.588 0 0 0 5.742-22.735c0-5.06-.786-9.938-2.243-14.516Z"
-                    ></path></svg
-                >
-            </li>
-            <li class="flex items-center gap-2">
-                • Bootstrap
-                <svg
-                    viewBox="0 0 256 204"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    preserveAspectRatio="xMidYMid"
-                    ><path
-                        fill="#7E13F8"
-                        d="M53.172 0C38.565 0 27.756 12.785 28.24 26.65c.465 13.32-.139 30.573-4.482 44.642C19.402 85.402 12.034 94.34 0 95.488v12.956c12.034 1.148 19.402 10.086 23.758 24.197 4.343 14.069 4.947 31.32 4.482 44.641-.484 13.863 10.325 26.65 24.934 26.65h149.673c14.608 0 25.414-12.785 24.93-26.65-.464-13.32.139-30.572 4.482-44.641 4.359-14.11 11.707-23.05 23.741-24.197V95.488c-12.034-1.148-19.382-10.086-23.74-24.196-4.344-14.067-4.947-31.321-4.483-44.642C228.261 12.787 217.455 0 202.847 0H53.17h.002ZM173.56 125.533c0 19.092-14.24 30.67-37.872 30.67h-40.23a4.339 4.339 0 0 1-4.338-4.339V52.068a4.339 4.339 0 0 1 4.339-4.34h39.999c19.705 0 32.637 10.675 32.637 27.063 0 11.503-8.7 21.801-19.783 23.604v.601c15.089 1.655 25.248 12.104 25.248 26.537Zm-42.26-64.05h-22.937v32.4h19.32c14.934 0 23.17-6.014 23.17-16.764 0-10.073-7.082-15.636-19.552-15.636Zm-22.937 45.256v35.705h23.782c15.548 0 23.786-6.239 23.786-17.965 0-11.728-8.467-17.742-24.786-17.742h-22.782v.002Z"
-                    ></path></svg
-                >
-            </li>
-            <li class="flex items-center gap-2">
-                • FireBase
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="21"
-                    height="21"
-                    fill="none"
-                    viewBox="0 0 600 600"
-                    ><path
-                        fill="#FF9100"
-                        d="M213.918 560.499c23.248 9.357 48.469 14.909 74.952 15.834 35.84 1.252 69.922-6.158 100.391-20.234-36.537-14.355-69.627-35.348-97.869-61.448-18.306 29.31-45.382 52.462-77.474 65.848Z"
-                    ></path><path
-                        fill="#FFC400"
-                        d="M291.389 494.66c-64.466-59.622-103.574-145.917-100.269-240.568.108-3.073.27-6.145.46-9.216a166.993 166.993 0 0 0-36.004-5.241 167.001 167.001 0 0 0-51.183 6.153c-17.21 30.145-27.594 64.733-28.888 101.781-3.339 95.611 54.522 179.154 138.409 212.939 32.093-13.387 59.168-36.51 77.475-65.848Z"
-                    ></path><path
-                        fill="#FF9100"
-                        d="M291.39 494.657c14.988-23.986 24.075-52.106 25.133-82.403 2.783-79.695-50.792-148.251-124.942-167.381-.19 3.071-.352 6.143-.46 9.216-3.305 94.651 35.803 180.946 100.269 240.568Z"
-                    ></path><path
-                        fill="#DD2C00"
-                        d="M308.231 20.858C266 54.691 232.652 99.302 212.475 150.693c-11.551 29.436-18.81 61.055-20.929 94.2 74.15 19.13 127.726 87.686 124.943 167.38-1.058 30.297-10.172 58.39-25.134 82.404 28.24 26.127 61.331 47.093 97.868 61.447 73.337-33.9 125.37-106.846 128.383-193.127 1.952-55.901-19.526-105.724-49.875-147.778-32.051-44.477-159.5-194.36-159.5-194.36Z"
-                    ></path></svg
-                >
-            </li>
-            <li class="flex items-center gap-2">
-                • SQL
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="22"
-                    height="22"
-                    viewBox="0 0 128 128"
-                >
-                    <path
-                        fill="#d1d1d1"
-                        d="M51.395 24.879c-27.422 0-49.649-3.832-49.649-8.535v92.261c0 4.727 22.227 8.536 49.649 8.536 27.421 0 49.648-3.832 49.648-8.536V16.29c0 4.758-22.227 8.59-49.648 8.59Zm0 0"
-                    ></path>
-                    <path
-                        fill="#adadad"
-                        d="M1.746 16.29v92.315c0 4.727 22.227 8.536 49.649 8.536V24.879c-27.422 0-49.649-3.832-49.649-8.59Zm92.317 4.405v92.262c4.425-1.277 6.98-2.777 6.98-4.375V16.289c0 1.633-2.547 3.106-6.98 4.406Zm0 0"
-                    ></path>
-                    <path
-                        fill="#939699"
-                        d="M101.043 16.313c0-4.723-22.23-8.555-49.648-8.555-27.422 0-49.649 3.832-49.649 8.555 0 4.726 22.227 8.558 49.649 8.558 27.417 0 49.648-3.832 49.648-8.558ZM1.746 74.332c0 4.727 22.227 8.535 49.649 8.535 27.421 0 49.648-3.832 49.648-8.535v6.984c0 4.723-22.227 8.532-49.648 8.532-27.422 0-49.649-3.832-49.649-8.532Zm0-30.75c0 4.723 22.227 8.535 49.649 8.535 27.421 0 49.648-3.836 49.648-8.535v6.98c0 4.727-22.227 8.536-49.648 8.536-27.422 0-49.649-3.832-49.649-8.535Zm0 0"
-                    ></path>
-                    <path
-                        fill="#ecedf0"
-                        d="M126.64 93.09c0 16.281-13.195 29.48-29.476 29.48s-29.48-13.199-29.48-29.48 13.199-29.477 29.48-29.477 29.477 13.196 29.477 29.477Zm0 0"
-                    ></path>
-                    <path
-                        fill="#3faa00"
-                        d="M123.004 93.09c0 14.273-11.57 25.84-25.84 25.84-14.273 0-25.84-11.567-25.84-25.84 0-14.27 11.567-25.84 25.84-25.84 14.27 0 25.84 11.57 25.84 25.84Zm0 0"
-                    ></path>
-                    <path
-                        fill="#fff"
-                        d="m88.063 105.906 24.027-13.87-24.028-13.872Zm0 0"
-                    ></path>
-                </svg>
-            </li>
-            <li class="flex items-center gap-2">
-                • MySQL
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    preserveAspectRatio="xMidYMid"
-                    viewBox="0 0 256 252"
-                    width="20"
-                    height="20"
-                >
-                    <path
-                        d="M236 194c-14 0-25 1-34 5-3 1-7 1-7 4l3 6c2 3 5 8 9 11l11 8 21 10 11 9 6 4-3-6-5-5c-5-7-11-13-18-18-6-3-18-9-20-15h-1l12-3 18-3 8-2v-2l-9-10c-8-8-18-15-28-22l-18-8c-2-1-6-2-7-4l-7-13-15-30-8-20c-18-30-38-48-68-65-6-4-14-5-22-7l-13-1-8-6C34 5 8-9 1 9c-5 11 7 22 11 28l9 13 3 9c3 8 5 17 9 24l6 10c2 2 4 3 5 6-3 4-3 9-4 13-7 20-4 44 5 59 2 4 9 14 18 10 8-3 6-13 8-22l1-4 8 14c5 9 14 18 22 24 4 3 8 8 13 10l-4-4-9-10c-8-10-14-21-20-32l-7-17-3-6c-3 4-7 7-9 12-3 7-3 17-4 26h-1c-6-1-8-7-10-12-5-12-6-32-1-46 1-4 6-15 4-19-1-3-4-5-6-7l-7-12-10-30-9-13c-3-5-7-8-10-14-1-2-2-5 0-7l2-2c2-2 9 0 11 1 6 3 12 5 17 9l8 6h4c6 1 12 0 17 2 9 3 18 7 25 12 23 14 42 35 54 59 3 4 3 8 5 12l12 26c4 8 7 16 12 23 3 4 14 6 18 8l12 4 18 12c2 2 11 7 12 10Z"
-                        fill="#00546B"></path>
-                    <path
-                        d="m58 43-7 1 6 7 4 9v-1c3-1 4-4 4-8l-2-4-5-4Z"
-                        fill="#00546B"></path>
-                </svg>
-            </li>
-            <li class="flex items-center gap-2">
-                • Git
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    preserveAspectRatio="xMidYMid"
-                    viewBox="0 0 256 256"
-                    width="20"
-                    height="20"
-                >
-                    <path
-                        d="M251.17 116.6 139.4 4.82a16.49 16.49 0 0 0-23.31 0l-23.21 23.2 29.44 29.45a19.57 19.57 0 0 1 24.8 24.96l28.37 28.38a19.61 19.61 0 1 1-11.75 11.06L137.28 95.4v69.64a19.62 19.62 0 1 1-16.13-.57V94.2a19.61 19.61 0 0 1-10.65-25.73L81.46 39.44 4.83 116.08a16.49 16.49 0 0 0 0 23.32L116.6 251.17a16.49 16.49 0 0 0 23.32 0l111.25-111.25a16.5 16.5 0 0 0 0-23.33"
-                        fill="#DE4C36"></path>
-                </svg>
-            </li>
-            <li class="flex items-center gap-2">
-                • Python
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="16 16 32 32"
-                    width="20"
-                    height="20"
-                    ><path
-                        fill="url(#a)"
-                        d="M31.885 16c-8.124 0-7.617 3.523-7.617 3.523l.01 3.65h7.752v1.095H21.197S16 23.678 16 31.876c0 8.196 4.537 7.906 4.537 7.906h2.708v-3.804s-.146-4.537 4.465-4.537h7.688s4.32.07 4.32-4.175v-7.019S40.374 16 31.885 16zm-4.275 2.454a1.394 1.394 0 1 1 0 2.79 1.393 1.393 0 0 1-1.395-1.395c0-.771.624-1.395 1.395-1.395z"
-                    ></path><path
-                        fill="url(#b)"
-                        d="M32.115 47.833c8.124 0 7.617-3.523 7.617-3.523l-.01-3.65H31.97v-1.095h10.832S48 40.155 48 31.958c0-8.197-4.537-7.906-4.537-7.906h-2.708v3.803s.146 4.537-4.465 4.537h-7.688s-4.32-.07-4.32 4.175v7.019s-.656 4.247 7.833 4.247zm4.275-2.454a1.393 1.393 0 0 1-1.395-1.395 1.394 1.394 0 1 1 1.395 1.395z"
-                    ></path><defs
-                        ><linearGradient
-                            id="a"
-                            x1="19.075"
-                            x2="34.898"
-                            y1="18.782"
-                            y2="34.658"
-                            gradientUnits="userSpaceOnUse"
-                            ><stop stop-color="#387EB8"></stop><stop
-                                offset="1"
-                                stop-color="#366994"></stop></linearGradient
-                        ><linearGradient
-                            id="b"
-                            x1="28.809"
-                            x2="45.803"
-                            y1="28.882"
-                            y2="45.163"
-                            gradientUnits="userSpaceOnUse"
-                            ><stop stop-color="#FFE052"></stop><stop
-                                offset="1"
-                                stop-color="#FFC331"></stop></linearGradient
-                        ></defs
-                    ></svg
-                >
-            </li>
-        </ul>
-        <p class="text-base text-white-600 dark:text-white-400 mt-3" data-cursor="text">Ádemas de programar me gusta mucho el fútbol, los videojuegos y la música</p>
-    </div>
+      {
+        SKILLS.map((skill) => (
+          <li class="flex items-center gap-2 group">
+            <span class="text-lg text-white">
+              •
+            </span>
+            {skill.name}
+          </li>
+        ))
+      }
+    </ul>
+    <p
+      class="text-base text-gray-400 dark:text-gray-100 mt-4 2xl:mt-7 italic border-l-4 border-indigo-500 pl-3"
+      data-cursor="text"
+    >
+      Además de programar, me gusta mucho el fútbol, los videojuegos y la
+      música.
+    </p>
+  </div>
 </Card>
