--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,10 +58,9 @@ import Spotify from "../components/Spotify.jsx";
     <Card
       colSpan="md:col-span-1 flex items-center justify-center"
       rowSpan="md:row-span-1"
-      title=""
+      title="👩🏻‍💻 Proyectos"
       href="/projects"
     >
-      <p class="text-lg font-medium text-center">Mis Proyectos</p>
     </Card>
 
     <Card colSpan="md:col-span-1 flex items-center" rowSpan="md:row-span-2">
