--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -16,7 +16,7 @@ import { SKILLS } from "../lib/constants.ts";
       {
         SKILLS.map((skill) => (
           <li class="flex items-center gap-2 group">
-            <span class="text-lg text-white">
+            <span class="text-lg text-white dark:text-black">
               •
             </span>
             {skill.name}
