--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -16,7 +16,7 @@ import { SKILLS } from "../lib/constants.ts";
       {
         SKILLS.map((skill) => (
           <li class="flex items-center gap-2 group">
-            <span class="text-lg text-white dark:text-black">
+            <span class="text-lg text-black dark:text-white">
               •
             </span>
             {skill.name}
@@ -25,7 +25,7 @@ import { SKILLS } from "../lib/constants.ts";
       }
     </ul>
     <p
-      class="text-base text-gray-400 dark:text-gray-100 mt-4 2xl:mt-7 italic border-l-4 dark:border-indigo-500 border-orange-600 pl-3"
+      class="text-base text-gray-400 dark:text-gray-100 mt-0 2xl:mt-7 italic border-l-4 dark:border-indigo-500 border-orange-600 pl-3"
       data-cursor="text"
     >
       Además de programar, me gusta mucho el fútbol, los videojuegos y la
