--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -4,7 +4,7 @@ import { EDUCATION } from "../lib/constants";
 ---
 
 <Layout title="Estudios">
-  <div class="max-w-3xl mx-auto mt-20">
+  <div class="max-w-3xl mx-auto mt-20 px-4">
     <ul>
       {
         EDUCATION.map((edu, index) => (
