--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,11 @@ interface Props {
 }
 
 const { title } = Astro.props;
+const currentPath = Astro.url.pathname;
 
 import "@fontsource-variable/onest";
 import { ViewTransitions } from "astro:transitions";
+import VerticalNavbar from "../components/VerticalNavbar.astro";
 ---
 
 <!doctype html>
@@ -36,6 +38,7 @@ import { ViewTransitions } from "astro:transitions";
     <title>{title}</title>
   </head>
   <body class="dark:bg-[#0e0e0e] bg-[#f9f9f9]">
+    {currentPath !== "/" && <VerticalNavbar />}
     <slot />
   </body>
 </html>
